apps/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-nas
  labels:
    app.kubernetes.io/name: syncthing-nas
    app.kubernetes.io/instance: syncthing-nas-web
    app.kubernetes.io/component: web
spec:
  clusterIP: None
  ports:
    - port: 8384
      targetPort: 8384
      name: web
